fixing title truncation issues for firefox

--- a/app/assets/stylesheets/desktop/topic-post.scss
+++ b/app/assets/stylesheets/desktop/topic-post.scss
@@ -310,14 +310,12 @@ nav.post-controls {
 }
 
 .bottom-round nav.post-controls .show-replies {
-background: scale-color-diff();
-margin-bottom: 0;
-padding-bottom: 8px;
+  background: scale-color-diff();
+  margin-bottom: 0;
+  padding-bottom: 8px;
   &:hover {background: scale-color-diff();
   }
 }
-
-
 
 .post-action {
   .relative-date {
@@ -538,25 +536,35 @@ iframe {
 
 .extra-info-wrapper {
   float: left;
-  max-width: 875px;
+  width: 76%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
   .topic-statuses {
     i         { color: $header_primary; }
     .unpinned { color: $header_primary; }
   }
-  .topic-link { color: $header_primary; }
+  .topic-link { color: $header_primary;
+  display: block;
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+
+  }
 }
 
 
 @include medium-width {
   .extra-info-wrapper {
-  max-width: 770px;
+  width: 73%;
 }
 }
 
 
 @include small-width {
     .extra-info-wrapper {
-  max-width: 720px;
+  width: 70%;
 }
 }
 
@@ -565,9 +573,6 @@ iframe {
     margin: 5px 0 0 0;
     font-size: 1.6em;
     line-height: 1.3em;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 
   }
 
@@ -584,6 +589,8 @@ iframe {
   .badge-category {
     vertical-align: top;
     margin-top: 2px;
+    float: left;
+    margin-right: 5px;
   }
 
 }
